# gneissDB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  PLAN.md  README.md  UNIMPLEMENTED.md  profile_writes.json
.githooks/: pre-commit
.github/workflows/: ci.yaml
benches/: memtable_bench.rs  read_bench.rs  sstable_bench.rs  write_bench.rs
examples/: profile_batch.rs  profile_scan.rs
scripts/: benchmark_comparison.rs  benchmark_comparison_full.rs  benchmark_concurrent.rs  benchmark_iouring.rs  benchmark_memtable.rs  benchmark_realistic.rs  profile_breakdown.rs  profile_detailed.rs  profile_target.rs  profile_writes.rs  profile_writes_detailed.rs  test_sstable_reads.rs
src/: cache.rs  db.rs  error.rs  fs.rs  fs_iouring.rs  fs_uring.rs  group_commit.rs  lib.rs  merge_iterator.rs  options.rs  table_cache.rs  types.rs
src/compaction/: level.rs  mod.rs  picker.rs
src/manifest/: edit.rs  mod.rs  reader.rs  version.rs  writer.rs
src/memtable/: arena_skiplist.rs  crossbeam_skiplist.rs  mod.rs  skiplist.rs
src/sstable/: block.rs  bloom.rs  builder.rs  footer.rs  index.rs  iterator.rs  mod.rs  reader.rs  table_handle.rs
src/wal/: mod.rs  reader.rs  writer.rs
